# Aria2

./: .gitignore  LICENSE  README.md  download.bat  download_model.bat  pyproject.toml  下载地址.txt
aria2/: __init__.py  __main__.py  cli.py  control.py  core.py  progress.py
tests/: __init__.py  test_downloader.py
