[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aria2"
version = "1.0.0"
description = "A lightweight resumable download manager with multi-segment parallel downloading"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aria2"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
aria2 = "aria2.cli:main"

[tool.setuptools.packages.find]
include = ["aria2*"]
